<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blanco"
    tools:context=".Calculadora">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/chewy"
            android:gravity="center"
            android:text="@string/calcu"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="15sp"
        android:paddingRight="15sp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/num1"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/number1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterNum"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/num2"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/number2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterNum"
            android:inputType="number" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnSum"
                style="@android:style/Widget.DeviceDefault.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:text="@string/sum" />

            <Button
                android:id="@+id/btnRes"
                style="@android:style/Widget.DeviceDefault.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/blue"
                android:text="@string/res" />

            <Button
                android:id="@+id/btnMul"
                style="@android:style/Widget.DeviceDefault.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="@string/multi" />

            <Button
                android:id="@+id/btnMayor"
                style="@android:style/Widget.DeviceDefault.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/otro"
                android:layout_marginLeft="15sp"
                android:text="@string/mayor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnDiv"
                style="@android:style/Widget.DeviceDefault.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/pink"
                android:text="@string/div" />

            <Button
                android:id="@+id/btnMCM"
                style="@android:style/Widget.DeviceDefault.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/green"
                android:text="@string/mcm" />

            <Button
                android:id="@+id/btnMcd"
                style="@android:style/Widget.DeviceDefault.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:text="@string/mcd" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="@color/red"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/setResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/cero"
            android:textColor="@color/negro"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/pie" />
    </LinearLayout>
</LinearLayout>