<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:padding="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:fontFamily="@font/chewy"
            android:text="@string/User"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:fontFamily="@font/chewy"
            android:text="@string/password"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnGet"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5sp"
            android:layout_weight="0.2"
            android:background="@color/boton1"
            android:text="@string/get"
            android:textColor="@color/blanco" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5sp"
            android:layout_weight="0.2"
            android:background="@color/boton2"
            android:text="@string/cancel"
            android:textColor="@color/blanco" />

        <TextView
            android:id="@+id/textForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="@string/recoverPass"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="@string/up"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:contentDescription="@android:string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textCopy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:text="@string/copy"
            android:textSize="15sp"
            app:autoSizeMaxTextSize="50px"
            app:autoSizeMinTextSize="20px" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>